fix: Align backoffice code with frontoffice changes

--- a/src/admin/styles/ux.scss
+++ b/src/admin/styles/ux.scss
@@ -50,3 +50,7 @@
     border-bottom: 1px solid $grey-e;
   }
 }
+
+.admin_page_integration-center-campaign .card {
+  max-width: 100%;
+}
